fix bugs on small devices

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   position: absolute;
   right: 4vw;
-  top: 29px;
+  top: 21px;
   z-index: 15;
 
   color: $color-1;
