--- a/src/components/Details/style.scss
+++ b/src/components/Details/style.scss
@@ -9,12 +9,12 @@
 }
 
 .details {
-  margin-top: 60px;
+  margin-top: 40px;
 
   ul li {
     display: flex;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 15px;
 
     .icon {
       font-size: 30px;
