--- a/src/components/Menu/MenuContent/style.scss
+++ b/src/components/Menu/MenuContent/style.scss
@@ -30,8 +30,8 @@
 
     .menu-nav-container {
       position: relative;
-      left: 100px;
-      top: 100px;
+      left: 70px;
+      top: 160px;
       overflow: hidden;
       width: 100vw;
     }
