--- a/src/pages/Homepage/style.scss
+++ b/src/pages/Homepage/style.scss
@@ -12,7 +12,7 @@
   }
 
   h1 {
-    font-size: 6.5rem;
+    font-size: 5rem;
     line-height: 6rem;
   }
 }
